Prevent extra space conflict from theme

--- a/css/instagram-widget.css
+++ b/css/instagram-widget.css
@@ -8,7 +8,16 @@
 	clear: both;
 	display: table;
 }
-.zoom-instagram-widget__item { float: left; position: relative; margin-top: 0 !important; }
+.zoom-instagram-widget__item {
+	float: left;
+	position: relative;
+	margin-top: 0 !important;
+}
+
+/* Prevent extra space conflict from theme */
+.widget.zoom-instagram-widget ul li.zoom-instagram-widget__item {
+	padding: 0;
+}
 
 .zoom-instagram-widget__items--no-js.zoom-instagram-widget__items .zoom-instagram-widget__item { margin-right: 10px; margin-bottom: 10px; }
 
